r600g,radeonsi: use fences to implement PIPE_QUERY_GPU_FINISHED

Bugzilla: https://bugs.freedesktop.org/show_bug.cgi?id=89014

Reviewed-by: Michel Dänzer <michel.daenzer@amd.com>